--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,11 @@ img {
   |============================
 */
 
+.header-fixed-box {
+    position: relative;
+    padding-top: 72px;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -254,9 +259,7 @@ img {
     color: var(--color-ocean);
 }
 
-.header-nav-link.current::after,
-.header-nav-link:hover:after,
-.header-nav-link:focus:after {
+.header-nav-link.current::after {
     background-color: var(--color-ocean);
 }
 
@@ -310,7 +313,6 @@ img {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/studio/hero/people-office-hero.jpg);
 
     position: relative;
-    top: 75px;
     z-index: var(--z-index-hero);
 
 
@@ -629,10 +631,11 @@ img {
 .footer-container {
     display: flex;
     align-items: baseline;
-    gap: 120px;
 }
 
-.footer-logo-container {}
+.footer-logo-container {
+    margin-right: 120px;
+}
 
 .footer-logo {
     color: #4d5ae5;
@@ -751,12 +754,11 @@ img {
     transform: translate(-50%, -50%) rotate(360deg) scale(0.2);
 }
 
-.madal-btn-exit {
+.modal-btn-exit {
     position: absolute;
     top: 12px;
     right: 12px;
 
-    display: block;
 
     width: 24px;
     height: 24px;
@@ -768,10 +770,15 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: color var(--anim-fast) var(--cubic-bezier), background-color var(--anim-fast) var(--cubic-bezier);
 }
 
-.madal-btn-exit:hover,
-.madal-btn-exit:focus {
+.modal-btn-exit:hover,
+.modal-btn-exit:focus {
     color: var(--color-white);
     background-color: var(--color-ocean);
 
@@ -782,8 +789,6 @@ img {
 
 }
 
-.modal-icon-exit:hover,
-.modal-icon-exit:focus {}
 
 
 
@@ -894,11 +899,13 @@ img {
     padding-right: 32px;
     padding-top: 40px;
 
-    background-color: rgba(69, 64, 139, 0.76);
+    background-color: var(--color-iris);
 
     transition: transform var(--anim-fast) var(--cubic-bezier);
 }
 
+
+.portfolio-item:focus-within .overlay,
 .portfolio-item:hover .overlay {
     transform: translateY(0);
 }
